# MARLCopsRobbers

./: .env-example  .gitignore  CLAUDE.md  LICENSE  README.md  players.example.yaml  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  rate_limits.json
deploy/: render.yaml  runbook.md
docs/: ANALYSIS.md  COST_ANALYSIS.md  PLAN.md  PRD.md  QUALITY.md  THEORY.md  TODO.md  UX.md
docs/prd/: PRD-CTDE.md  PRD-ENV.md  PRD-MCP.md  PRD-REPORT.md
docs/schema/: report.schema.json  subgame.schema.json
docs/shared/: PROMPTS.md
notebooks/: analysis.ipynb
planning/: BRIEF.md  CANONICAL_FIXES.md  CANONICAL_FIXES_2.md  GUIDELINES.md  P-BONUS_NASHQ_IMPL_SPEC.md  P1_IMPL_SPEC.md  P2_FIXES.md  P2_IMPL_SPEC.md  P3_FIXES.md  P3_IMPL_SPEC.md  P4a_IMPL_SPEC.md  P4b_FIXES.md  P4b_IMPL_SPEC.md  P4c_IMPL_SPEC.md  VALIDATED_FIXES.md
results/figures/: experiment_manifest.json
results/runs/: history.jsonl  sensitivity_view_radius.jsonl
results/subgames/: p3-smoke-7.json
scripts/: capture_comms.py  capture_screens.py  check_file_sizes.py  finetune_ctde.py  make_cover_sheet.py  play.py  plot_minimax_q.py  run_match.py  run_results.py  sensitivity_sweep.py  serve_match_http.py  smtp_smoke.py  sweep_ctde.py  train_ctde.py  train_iql_baseline.py  train_minimax_q.py
src/: __init__.py  cli.py
src/api/: __init__.py  gatekeeper.py  http_client.py
src/gui/: __init__.py  __main__.py  draw_plan.py  input_map.py  palette.py  render.py  spectator.py  state_client.py  transform.py
src/marl/: __init__.py  olora_bundle.py
src/marl/baselines/: __init__.py  minimax_lp.py  minimax_q.py  minimax_runner.py  tabular_pursuit.py
src/marl/data/: __init__.py  bc_dataset.py  bc_npz.py  bc_split.py  heuristics.py  obs_encoder.py  schemas.py
src/marl/env/: __init__.py  _env_helpers.py  actions.py  cops_robbers_env.py  curriculum.py  grid.py  observation.py  observation_encoder.py  render_state.py  reward.py  scorer.py  transition.py  types.py
src/marl/learner/: __init__.py  _learner_helpers.py  learner_base.py  learners.py
src/marl/mixers/: __init__.py  base_mixer.py  qmix_mixer.py  vdn_mixer.py
src/marl/nets/: __init__.py  agent_net.py  bc_train.py  dims.py  olora_init.py  olora_linear.py
src/marl/replay/: __init__.py  _smoke_helpers.py  _smoke_solve.py  episode_buffer.py  tabular_smoke.py
src/mcp/: __init__.py  agent_runtime.py  auth.py  clients.py  cloud.py  cloud_cop.py  cloud_thief.py  cop_server.py  jwt_auth.py  localhost_cop.py  localhost_thief.py  match.py  referee.py  schemas.py  server_builder.py  thief_server.py
src/reporting/: __init__.py  mailer.py  players.py  schema.py  send.py
src/results/: __init__.py  aggregate.py  comms.py  make_figures.py  plots.py  run_log.py  sensitivity.py
src/sdk/: __init__.py  _helpers.py  _train_helpers.py  sdk.py
src/services/: __init__.py  _trainer_helpers.py  checkpoints.py  episode_pad.py  finetune.py  heuristic_policy.py  policy.py  rollout.py  selfplay.py  spectator.py  sweep.py  trainer.py
src/utils/: __init__.py  compute.py  config_loader.py  jsonschema_min.py
tests/: __init__.py  conftest.py
tests/architecture/: __init__.py  test_egress_via_gatekeeper.py  test_gui_purity.py  test_import_boundary.py  test_required_docs_present.py  test_step_no_leak.py  test_train_exec_split.py
tests/env/: __init__.py
tests/fixtures/: bc_mini_2x2_cop.npz  bc_mini_2x2_thief.npz  bc_mini_3x3_cop.npz  bc_mini_3x3_thief.npz
tests/integration/: __init__.py  test_comms_proof.py  test_gui_render.py  test_make_figures.py  test_match.py  test_mcp_servers.py  test_mcp_tools.py  test_p3_pipeline.py  test_referee.py
tests/unit/: __init__.py  _buffer_fixtures.py  _learner_fixtures.py  test_actions.py  test_agent_net.py  test_agent_runtime.py  test_aggregate.py  test_bc_dataset.py  test_bc_dataset_role.py  test_bc_train.py  test_checkpoints.py  test_cli.py  test_compute.py  test_config_loader.py  test_curriculum.py  test_dims.py  test_draw_plan.py  test_env.py  test_env_p2_fixes.py  test_episode_buffer.py  test_episode_buffer_active.py  test_finetune.py  test_gatekeeper.py  test_grid.py  test_gui_logic.py  test_heuristics.py  test_jsonschema_min.py  test_jwt_auth.py  test_learner.py  test_learner_helpers.py  test_learners.py  test_localhost_entrypoints.py  test_mailer.py  test_mcp_clients.py  test_mcp_schemas.py  test_minimax_lp.py  test_minimax_q.py  test_minimax_runner.py  test_mixers.py  test_obs_encoder.py  (+28 more)
