[project]
name = "marlcopsrobbers"
version = "1.0.0"
description = "Bar-Ilan Vibe-Coding & RL Workshop — Assignment 6 (MARL Cops & Robbers: CTDE QMIX/VDN/IQL, dual-MCP, cloud, GUI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# §5.3/§8 — two FastMCP servers + HTTP inter-agent comms + JWT bearer auth + cloud.
mcp = [
    "fastmcp>=2.11",
    "httpx>=0.27",
    "pyjwt>=2.9",
    "prefect>=3.0",
]
# §5.5 — Gmail report. smtplib is stdlib (App-Password path); these enable the OAuth fallback.
mail = [
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
filterwarnings = ["ignore:pkg_resources is deprecated:UserWarning"]

# Stricter-than-spec Ruff (documented deviation, mirrors A4/A5): 110/py311 + PL + RUF.
[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 85
