[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# `src` is the import root (imports are `src.marl`, `src.mcp`, ...), so install it as
# the package — this makes `uv run python scripts/<name>.py` resolve `import src.*`
# directly (not only via `-m`/cwd). Build artifacts stay out of the wheel.
[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "marlcopsrobbers"
version = "1.0.0"
description = "Bar-Ilan Vibe-Coding & RL Workshop — Assignment 6 (MARL Cops & Robbers: CTDE QMIX/VDN/IQL, dual-MCP, cloud, GUI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

# §5.4 GUI (Pygame god-view spectator) is an OPTIONAL extra, needed only at P7 —
# headless training / CI / the core test suite do NOT require SDL. Install with
# `uv sync --extra gui` (or `--all-extras`); CI installs it for the GUI tests.
[project.optional-dependencies]
# pygame-ce (Community Edition) is a drop-in fork — `import pygame` is unchanged —
# but ships prebuilt universal2 wheels for Python 3.14 (stock pygame 2.6.1 has no
# 3.14 wheel, so it tries to build from source and fails on missing SDL.h).
gui = [
    "pygame-ce>=2.5.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# §5.3 — two FastMCP servers + HTTP inter-agent comms + JWT bearer auth (P5 localhost).
mcp = [
    "fastmcp>=2.11",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
]
# §8 — Prefect Horizon cloud deploy (P8 only; split out so the P5 localhost MCP
# install stays light — Prefect pulls a large transitive tree not needed locally).
cloud = [
    "prefect>=3.0",
]
# §5.5 — Gmail report. smtplib is stdlib (App-Password path); these enable the OAuth fallback.
mail = [
    "google-api-python-client>=2.140",
    "google-auth>=2.34",
    "google-auth-oauthlib>=1.2",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
filterwarnings = ["ignore:pkg_resources is deprecated:UserWarning"]
# `slow` flags the full-BC / OLoRA-finetune long runs (kept as scripts / marked
# slow) so the default `uv run pytest` stays fast; deselect via `-m "not slow"`.
markers = [
    "slow: long-running full-BC / finetune jobs (excluded from the fast default run)",
]

# Stricter-than-spec Ruff (documented deviation, mirrors A4/A5): 110/py311 + PL + RUF.
[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# "D" (pydocstyle) enforces the §16 module/component docstring gate — every
# package __init__ + public component carries a docstring (CLAUDE.md §16).
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PL", "RUF", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests are exempt from the docstring (D) gate; magic-value (PLR2004) is fine in asserts.
"tests/**" = ["PLR2004", "D"]

[tool.coverage.run]
branch = true
source = ["src"]
# The cloud deploy entrypoints build a module-level `mcp` at import — they load a real
# OLoRA `.pt` from MODEL_PATH on the FastMCP/Prefect worker and cannot run in CI. The
# tested factory is src/mcp/cloud.py:build_cloud_server (covered); these are thin wiring.
omit = ["src/mcp/cloud_cop.py", "src/mcp/cloud_thief.py", "src/gui/__main__.py"]

[tool.coverage.report]
fail_under = 85
